--- a/index.html
+++ b/index.html
@@ -11,6 +11,67 @@
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+  <div class="nav-container">
+    <nav>
+      <a href="#"></a>
+      <a href="services.html">Services</a>
+      <a href="#">Prodcut</a>
+      <a href="#">Vision</a>
+      <a href="#">Features</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </div>
+  <div class="action-container">
+    <div class="action-container-inner">
+      <h1>Innovation<br>
+      On<br>
+      Demand<br>
+      </h1>
+      <button>Get Started</button>
+    </div>
+  <img src="img/header-img.png" alt="Image of a code snippet.">
+  </div>
+  <section class="section-top">
+    <div class="content-first">
+      <h2>Features</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+
+    <div class="content-first">
+      <h2>About</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  <section class="second-section">
+    <div class="content-second">
+      <h2>Services</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div class="content-second">
+      <h2>Product</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    <div class="content-second">  
+      <h2>Vision</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+  <footer id="footer">
+  <h2>Contact</h2>
+    <address>
+      123 Way 456 Street<br>
+      Somewhere, USA<br>
+      <br>
+      1 (888) 888-8888<br>
+      <br>
+      <a href="sales@greatidea.io">sales@greatidea.io</a>
+    </address>
+    <div id="copyright">
+  Copyright Great Idea! 2018
+    </div>
+  </footer>
 </body>
 </html>
