--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <a href="#"></a>
       <a href="services.html">Services</a>
-      <a href="#">Prodcut</a>
+      <a href="#">Product</a>
       <a href="#">Vision</a>
       <a href="#">Features</a>
       <a href="#">About</a>
