--- a/indexTWO.html
+++ b/indexTWO.html
@@ -10,20 +10,32 @@
 
 </head>
 
-<body>
-  <main>
-    <div class="nav-container">
-      <nav>
-        <a href="#"></a>
+
+<header>
+    <div class="navbar">
         <a href="services.html">Services</a>
-        <a href="#">Product</a>
-        <a href="#">Vision</a>
-        <a href="#">Features</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-      </nav>
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+        <a href="#product">Product</a>
+        <a href="#vision">Vision</a>
+        <a href="#features">Features</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
     </div>
+</header>
+    
+    <body>
+        <main>
+
+        </main>
+    </body>
+    
+
+
+
+
+
+
+
     <div class="action-container">
       <div class="action-container-inner">
         <h1>Innovation<br>
