updated / fixed nav bar for Desk.

--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
 
 <header>
   <div class="navbar">
+      <div>
         <a href="services.html">Services</a>
         <a href="#product">Product</a>
         <a href="#vision">Vision</a>
         <a href="#features">Features</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
+      </div>
         <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
   </div>
 </header>
+
+
 <body>
   <main>
     <div class="action-container">
